Minor fix on old class